--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -25,39 +25,31 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 # 代理分组
-custom_proxy_group=🚀 全局代理`select`[]⚡ 低延迟`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇹🇼 TW`[]🌐 其他`[]🔍 手动选择`[]DIRECT
-custom_proxy_group=🔍 手动选择`select`.*
-custom_proxy_group=⚡ 低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
+custom_proxy_group=🚀 Global Proxy`select`[]⚡ Low-Latency`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇹🇼 TW`[]🌐 Others`[]🔍 Manual`[]DIRECT
+custom_proxy_group=🔍 Manual`select`.*
+custom_proxy_group=⚡ Low-Latency`url-test`.*`https://www.gstatic.com/generate_204`180,,30
 custom_proxy_group=🇭🇰 HK`url-test`🇭🇰|香港`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TW`url-test`🇹🇼|台湾`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 SG`url-test`🇸🇬|新加坡`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`🇯🇵|日本`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 US`url-test`🇺🇸|美国`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 海外服务`select`[]🚀 全局代理`[]🇭🇰 HK`[]🇸🇬 SG`[]🇹🇼 TW`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 其他
-custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理
-custom_proxy_group=🇨🇳 国内服务`select`[]DIRECT
-custom_proxy_group=📱 短视频`select`[]DIRECT
-custom_proxy_group=📢 广告拦截`select`[]REJECT
-custom_proxy_group=🎮 游戏`select`[]🚀 全局代理`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
+custom_proxy_group=🌐 Others`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=🌍 Oversea Services`select`[]🚀 Global Proxy`[]🇭🇰 HK`[]🇸🇬 SG`[]🇹🇼 TW`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Others
+custom_proxy_group=📢 AdBlock`select`[]REJECT
+custom_proxy_group=🇨🇳 China Direct`select`[]DIRECT
+custom_proxy_group=🐟 Unmatched`select`[]🚀 Global Proxy`[]DIRECT
 
 # 分流规则
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
-ruleset=📱 短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
-ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
-ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=🇨🇳 国内服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
-ruleset=🇨🇳 国内服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
-ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
-ruleset=🇨🇳 国内服务,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
-ruleset=🇨🇳 国内服务,[]GEOIP,CN,no-resolve
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=📢 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=🚀 Global Proxy,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
+ruleset=🇨🇳 China Direct,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
+ruleset=🇨🇳 China Direct,[]GEOIP,CN,no-resolve
+ruleset=🐟 Unmatched,[]FINAL
 
 # TUN 配置优化
 tun:
@@ -77,7 +69,7 @@ tun:
 dns:
   enable: true
   ipv6: false
-  listen: 0.0.0.0:53
+  listen: 127.0.0.1:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
@@ -94,34 +86,23 @@ dns:
   proxy-server-nameserver:
     - https://dns.adguard.com/dns-query
     - https://cloudflare-dns.com/dns-query
-    - https://dns.google/dns-query
   fallback:
-    - https://dns.adguard.com/dns-query
-    - https://cloudflare-dns.com/dns-query
     - https://dns.google/dns-query
     - 223.6.6.6
   fallback-filter:
     geoip: true
     geoip-code: CN
-    ipcidr:
-      - 127.0.0.0/8
-      - 169.254.0.0/16
-      - 192.0.0.0/24
-  nameserver-policy:
-    '+.bilibili.com': 223.6.6.6
-    '+.(taobao.com|tmall.com|alipay.com|alicdn.com|aliyun.com)': 223.6.6.6
-    '+.(qq.com|tencent.com|weixin.com|wechat.com|weiyun.com)': 223.6.6.6
-    '+.cn': 223.6.6.6
-    '+.(google.com|youtube.com|github.com|facebook.com|x.com|instagram.com|netflix.com|discord.com|reddit.com|tiktok.com)': 'https://cloudflare-dns.com/dns-query#proxy'
+    ipcidr: [127.0.0.0/8,169.254.0.0/16,192.0.0.0/24]
+
   caching: true
   cache-size: 5000
   cache-ttl: 3600
 
-# 协议设置
+# Protocol优化
 max-udp-packet-size: 4096
 http:
   max-connections-per-host: 16
-  connection-pool-size: 256
+  connection-pool-size: 128
   idle-timeout: 60
 http2:
   max-concurrent-streams: 256
@@ -129,11 +110,13 @@ tls:
   fast-open: true
   reuse-session: true
   session-ticket: true
-  session-cache-size: 512
+  session-cache-size: 256
   min-version: 1.2
   max-version: 1.3
 
-# 地理数据文件
+# Geo Data Auto-Update - 自动化维护
+geo-auto-update: true
+geo-update-interval: 24
 geox-url:
   geoip: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat
   geosite: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat
@@ -144,7 +127,7 @@ geodata-mode: true
 geodata-loader: memconservative
 geoip-maxmind-compatibility: true
 
-# Sniffer 配置优化
+# Sniffer 优化
 sniffer:
   enable: true
   force-dns-mapping: true
@@ -154,10 +137,10 @@ sniffer:
   skip-domain:
     - '*.cn'
     - '*.bilibili.com'
-    - '*.taobao.com'
     - '*.qq.com'
   sniff-timeout: 1.0
 
+# Profile
 profile:
   store-selected: true
   store-fake-ip: false
