--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -1,10 +1,10 @@
-# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换最终优化配置
+# 面向中国大陆电信蜂窝网络的 Mihomo 订阅转换终极优化配置
 
 [custom]
 # ────────── 基础设置 ──────────
-exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|^\d[\d.]*\s*[MG]B(?![A-Za-z])|[:：]\s*\d[\d.]*\s*GB(?![A-Za-z])|剩[余餘]流量|流量[：:]|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰\s*(ID|HSD|SNI):|📝\s*Gói:|测试|临时|备用)
-add_emoji=true           # 用户体验：启用新 Emoji，移除旧 Emoji
-remove_old_emoji=true
+exclude_remarks=(Data Left|Remain:|Traffic:|Expiry|Expiration|Reset|^\d[\d.]*\s*[MG]B(?![A-Za-z])|[:：]\s*\d[\d.]*\s*GB(?![A-Za-z])|剩[余餘]流量|流量[：:]|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰\s*(ID|HSD|SNI):|📝\s*Gói:|测试|临时|备用)
+add_emoji: true
+remove_old_emoji: true
 # emoji 列表：详细覆盖常用城市与服务商，防止匹配遗漏
 emoji=美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States,🇺🇸
 emoji=香港|HK|Hong Kong,🇭🇰
@@ -20,8 +20,8 @@ emoji=澳大利亚|悉尼|墨尔本|AU|Australia|Sydney|Melbourne,🇦🇺
 emoji=俄罗斯|莫斯科|圣彼得堡|RU|Russia|Moscow|Saint Petersburg,🇷🇺
 emoji=官.?网|官方|产品|平台|修复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤,ℹ️
 
-enable_rule_generator=true    # 自动化维护：动态规则生成
-overwrite_original_rules=true  # 覆盖原始规则
+enable_rule_generator: true
+overwrite_original_rules: true
 
 # ────────── 代理分组 (优先级调优) ──────────
 custom_proxy_group=🚀 Global Proxy`select`[]⚡ Low-Latency`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇹🇼 TW`[]🌐 Others`[]🔍 Manual`[]DIRECT
@@ -33,7 +33,7 @@ custom_proxy_group=🇸🇬 SG`url-test`🇸🇬|新加坡`https://www.gstatic.c
 custom_proxy_group=🇯🇵 JP`url-test`🇯🇵|日本`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 US`url-test`🇺🇸|美国`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌐 Others`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=🌍 Oversea Services`select`[]🚀 Global Proxy`[]🇭🇰 HK`[]🇸🇬 SG`[]🇹🇼 TW`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Others
+custom_proxy_group=🌍 Overseas Services`select`[]🚀 Global Proxy`[]🇭🇰 HK`[]🇸🇬 SG`[]🇹🇼 TW`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Others
 custom_proxy_group=📢 AdBlock`select`[]REJECT
 custom_proxy_group=🇨🇳 China Direct`select`[]DIRECT
 custom_proxy_group=🐟 Unmatched`select`[]🚀 Global Proxy`[]DIRECT
@@ -41,10 +41,10 @@ custom_proxy_group=🐟 Unmatched`select`[]🚀 Global Proxy`[]DIRECT
 # ────────── 分流规则 (规则拆分 & 顺序优化) ──────────
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=📢 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
-ruleset=🌍 Oversea Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=🌍 Overseas Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🌍 Overseas Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🌍 Overseas Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+ruleset=🌍 Overseas Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🚀 Global Proxy,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
 ruleset=🇨🇳 China Direct,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=🇨🇳 China GeoIP,[]GEOIP,CN,no-resolve
@@ -52,14 +52,14 @@ ruleset=🐟 Unmatched,[]FINAL
 
 # ────────── TUN 配置优化 (性能 & 安全) ──────────
 tun:
-  enable: true  # 性能：开启内核 TUN 转发
-  stack: gvisor  # 稳定、省资源
+  enable: true
+  stack: gvisor
   dns-hijack:
-    - udp://0.0.0.0:53  # 安全：拦截所有 DNS
+    - udp://0.0.0.0:53
     - tcp://0.0.0.0:53
   auto-route: true
-auto-detect-interface: true
-  mtu: 1350  # 蜂窝网络最佳 MTU
+  auto-detect-interface: true
+  mtu: 1350
   strict-route: true
   endpoint-independent-nat: true
   include-uid-range: [1000-65535]
@@ -67,8 +67,8 @@ auto-detect-interface: true
 # ────────── DNS 配置 (安全隐私) ──────────
 dns:
   enable: true
-  ipv6: false  # 禁用 IPv6，防止泄露
-  listen: 127.0.0.1:53  # 仅本地监听
+  ipv6: false
+  listen: 127.0.0.1:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
@@ -80,12 +80,12 @@ dns:
     - '+.pool.ntp.org'
     - '+.(cmpassport.com|10010.com|189.cn)'
   nameserver:
-    - https://dns.alidns.com/dns-query  # 国内 DoH 首选
+    - https://dns.alidns.com/dns-query
     - 223.6.6.6
   proxy-server-nameserver:
     - https://dns.adguard.com/dns-query
     - https://cloudflare-dns.com/dns-query
-  fallback:  # 回退链，自动化维护
+  fallback:
     - https://dns.google/dns-query
     - 223.6.6.6
   fallback-filter:
@@ -93,9 +93,9 @@ dns:
     geoip-code: CN
     ipcidr: [127.0.0.0/8,169.254.0.0/16,192.0.0.0/24]
   caching: true
-  cache-size: 5000  # DNS 缓存提升命中率
+  cache-size: 5000
   cache-ttl: 3600
-  nameserver-policy:  # 常用域名策略
+  nameserver-policy:
     '+.bilibili.com': 223.6.6.6
     '+.(taobao.com|tmall.com|alipay.com)': 223.6.6.6
     '+.(qq.com|wechat.com)': 223.6.6.6
@@ -103,7 +103,7 @@ dns:
     '+.(google.com|youtube.com)': 'https://cloudflare-dns.com/dns-query#proxy'
 
 # ────────── 协议 & 其他优化 ──────────
-max-udp-packet-size: 4096  # 支持大 UDP 包
+max-udp-packet-size: 4096
 http:
   max-connections-per-host: 16
   connection-pool-size: 128
@@ -120,7 +120,7 @@ tls:
 
 # ────────── 地理数据自动更新 (自动化维护) ──────────
 geo-auto-update: true
-geo-update-interval: 24h  # 每 24 小时更新一次
+geo-update-interval: 24h
 geox-url:
   geoip: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat
   geosite: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat
@@ -136,7 +136,7 @@ sniffer:
   force-dns-mapping: true
   override-destination: true
   sniffing: [tls, http]
-  port-whitelist: [80,443]  # 限制常见端口
+  port-whitelist: [80,443]
   skip-domain: ['*.cn','*.qq.com','*.bilibili.com']
   sniff-timeout: 1.0
 
