--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -47,7 +47,7 @@ ruleset=🌍 Overseas Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR
 ruleset=🌍 Overseas Services,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🚀 Global Proxy,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
 ruleset=🇨🇳 China Direct,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
-ruleset=🇨🇳 China GeoIP,[]GEOIP,CN,no-resolve
+ruleset=🇨🇳 China Direct,[]GEOIP,CN,no-resolve
 ruleset=🐟 Unmatched,[]FINAL
 
 # ────────── TUN 配置优化 (性能 & 安全) ──────────
