--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -24,7 +24,7 @@ enable_rule_generator: true
 overwrite_original_rules: true
 
 # ────────── 代理分组 (优先级调优) ──────────
-custom_proxy_group=🚀 Global Proxy`select`[]⚡ Low-Latency`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇹🇼 TW`[]🌐 Others`[]🔍 Manual`[]DIRECT
+custom_proxy_group=🚀 Global Proxy`select`[]🔍 Manual`[]⚡ Low-Latency`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇹🇼 TW`[]🌐 Others`[]DIRECT
 custom_proxy_group=⚡ Low-Latency`url-test`.*`https://www.gstatic.com/generate_204`180,,30
 custom_proxy_group=🔍 Manual`select`[]
 custom_proxy_group=🇭🇰 HK`url-test`🇭🇰|香港`https://www.gstatic.com/generate_204`300,,50
